<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_72" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="YS Display-Bold.ttf">
            <string>YSDisplay-Bold</string>
        </array>
    </customFonts>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="tIQ-BK-L64">
                                <rect key="frame" x="20" y="69" width="390" height="829"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ax5-Vi-Gip" userLabel="Labels Stack View">
                                        <rect key="frame" x="0.0" y="0.0" width="390" height="24"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MqB-Zz-eJd" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="353.66666666666669" height="24"/>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsw-7P-zD9" userLabel="Index Label">
                                                <rect key="frame" x="353.66666666666669" y="0.0" width="36.333333333333314" height="24"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wpJ-Pc-ikk" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="44" width="390" height="585"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="wpJ-Pc-ikk" secondAttribute="height" multiplier="2:3" id="LRB-bf-5O6"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Очень важный вопрос" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lqz-SN-3wD" userLabel="Question Label">
                                        <rect key="frame" x="74.333333333333329" y="649" width="241.33333333333337" height="100"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0mX-Uw-BEZ" userLabel="Buttons Stack View">
                                        <rect key="frame" x="0.0" y="769" width="390" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gtm-gH-SZ1" userLabel="NO Button">
                                                <rect key="frame" x="0.0" y="0.0" width="185" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="yc5-O9-spW"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius ">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gwh-ka-PJq"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e26-Ss-8II" userLabel="YES Button">
                                                <rect key="frame" x="205" y="0.0" width="185" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="ylt-OA-ZV6"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius ">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dim-cU-qz6"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="e26-Ss-8II" firstAttribute="height" secondItem="Gtm-gH-SZ1" secondAttribute="height" id="T4p-ir-gPt"/>
                                            <constraint firstItem="e26-Ss-8II" firstAttribute="width" secondItem="Gtm-gH-SZ1" secondAttribute="width" id="pP1-Kh-4po"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="bottom" secondItem="0mX-Uw-BEZ" secondAttribute="bottom" id="14i-lv-CzI"/>
                                    <constraint firstAttribute="trailing" secondItem="ax5-Vi-Gip" secondAttribute="trailing" id="ARq-z2-9k2"/>
                                    <constraint firstItem="wpJ-Pc-ikk" firstAttribute="leading" secondItem="tIQ-BK-L64" secondAttribute="leading" id="GU3-U1-D1G"/>
                                    <constraint firstAttribute="trailing" secondItem="wpJ-Pc-ikk" secondAttribute="trailing" id="RY9-zE-9hi"/>
                                    <constraint firstAttribute="trailing" secondItem="0mX-Uw-BEZ" secondAttribute="trailing" id="VVG-3C-eqa"/>
                                    <constraint firstItem="0mX-Uw-BEZ" firstAttribute="leading" secondItem="tIQ-BK-L64" secondAttribute="leading" id="mLA-EZ-MCs"/>
                                    <constraint firstItem="ax5-Vi-Gip" firstAttribute="leading" secondItem="tIQ-BK-L64" secondAttribute="leading" id="wJa-L7-Kki"/>
                                </constraints>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Cpd-X6-dKp">
                                <rect key="frame" x="205" y="456" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tIQ-BK-L64" secondAttribute="trailing" constant="20" id="9yA-Fq-EhP"/>
                            <constraint firstItem="tIQ-BK-L64" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="CfB-nH-i5j"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="tIQ-BK-L64" secondAttribute="bottom" id="P9U-O3-y4p"/>
                            <constraint firstItem="Cpd-X6-dKp" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fja-lh-UhG"/>
                            <constraint firstItem="tIQ-BK-L64" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="kdf-h9-70W"/>
                            <constraint firstItem="Cpd-X6-dKp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qef-4G-ZRB"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="Cpd-X6-dKp" id="cZv-af-GIf"/>
                        <outlet property="imageView" destination="wpJ-Pc-ikk" id="XMk-q0-fTe"/>
                        <outlet property="indexLabel" destination="Vsw-7P-zD9" id="tzP-Nj-pue"/>
                        <outlet property="noButton" destination="Gtm-gH-SZ1" id="xts-b3-Qtd"/>
                        <outlet property="questionText" destination="Lqz-SN-3wD" id="qzK-iJ-5S8"/>
                        <outlet property="questionTitleLabel" destination="MqB-Zz-eJd" id="Avj-Nj-qRn"/>
                        <outlet property="yesButton" destination="e26-Ss-8II" id="bbl-rW-EdS"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.813953488372093" y="55.36480686695279"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
